Fix nav 1024 and skills.html on mobile device

--- a/css/custom.css
+++ b/css/custom.css
@@ -23,6 +23,11 @@
     }
 }
 
+@media (width: 1024px) {
+    .navShow {
+        display: flex
+    }
+}
 
 body {
     display:flex;
